# holt

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PERF_FINDINGS.md  PGO.md  README.md  ROADMAP.md  SECURITY.md  TESTING.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  nightly.yml  release.yml
benches/: Cargo.toml  README.md  RESULTS.md  concurrent.rs  main.rs  regression.rs  stress.rs
crates/holt-ffi/: README.md
crates/holt-ffi/include/: holt_ffi.h
crates/holt-ffi/src/: lib.rs
docs/: benchmarks.md  v0.4-release.md
docs/design/: cold-read-HANDOFF.md  io-optimization.md  scale-curve-findings.md
docs/experiments/: optimistic-write-descent.patch
examples/: basic_kv.rs  filesystem_meta.rs  s3_metadata.rs  session_store.rs  wal_crash_soak.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: atomic_model.rs  db_model.rs
release-notes/: v0.1.0.md
src/: lib.rs  metrics.rs
src/api/: atomic.rs  builder.rs  checkpoint.rs  config.rs  db.rs  errors.rs  key.rs  mod.rs  range.rs  snapshot.rs  stats.rs  tree.rs  view.rs
src/checkpoint/: eviction.rs  io.rs  mod.rs  round.rs
src/concurrency/: endpoint_locks.rs  gate.rs  hybrid_latch.rs  mod.rs
src/engine/: compact.rs  iter.rs  mod.rs  route_cache.rs  simd.rs  walker.rs
src/engine/walker/: cold.rs  cow.rs  erase.rs  insert.rs  key.rs  lookup.rs  merge.rs  migrate.rs  mod.rs  range.rs  readers.rs  route.rs  scan.rs  spillover.rs  tests.rs  types.rs  writers.rs
src/journal/: codec.rs  group_commit.rs  mod.rs  reader.rs  ring.rs  tests.rs  txn_op.rs  writer.rs
src/layout/: blob_node.rs  header.rs  leaf.rs  mod.rs  node.rs  nodes.rs  prefix.rs  slot.rs
src/store/: blob_frame.rs  bloom.rs  buffer_manager.rs  mod.rs
src/store/backend/: aligned.rs  mod.rs  persistent.rs
src/store/backend/persistent/: mod.rs  uring.rs
src/store/blob_store/: memory.rs  mod.rs
src/store/blob_store/file/: cold_index.rs  mod.rs
src/store/buffer_manager/: admission.rs  cached_blob.rs  guid_hash.rs  mod.rs  telemetry.rs
tests/: bench_bg_checkpointer.rs  bench_contention_p95.rs  bench_multi_reader.rs  bench_wal_checkpoint.rs  checkpoint.rs  checkpoint_failpoint.rs  concurrent_stress.rs  layout_invariants.rs  properties.rs  scan_stats.rs  sm_durable.rs  snapshot.rs  tree_smoke.rs  wal_round_trip.rs  wal_tree_integration.rs
tools/soak/: README.md
tools/soak/src/: main.rs
