[package]
name = "holt"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "An adaptive-radix-tree metadata storage engine for path-shaped keys, with per-blob concurrency and crash-safe persistence."
license = "MIT"
authors = ["the holt contributors"]
readme = "README.md"
repository = "https://github.com/feichai0017/holt"
homepage = "https://github.com/feichai0017/holt"
documentation = "https://docs.rs/holt"
keywords = ["art", "radix-tree", "metadata", "storage", "embedded"]
categories = ["database-implementations", "data-structures", "filesystem"]

# v0.1 deps. PersistentBackend is available on every Unix; io_uring
# is the Linux fast path (Stage 7).
[dependencies]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7"

[dev-dependencies]
rand = "0.9"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
rocksdb = { version = "0.23", default-features = false }
# `bundled` ships a vendored libsqlite3 so contributors don't need
# a system SQLite — keeps the bench comparator apples-to-apples
# across machines.
rusqlite = { version = "0.32", features = ["bundled"] }
proptest = { version = "1", default-features = false, features = ["std", "fork", "timeout"] }

[features]
default = []
# Future: "metrics" for prometheus, "mvcc" for snapshot isolation.

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.bench]
inherits = "release"

[[example]]
name = "basic_kv"
path = "examples/basic_kv.rs"

[[example]]
name = "filesystem_meta"
path = "examples/filesystem_meta.rs"

[[example]]
name = "session_store"
path = "examples/session_store.rs"

[[example]]
name = "s3_metadata"
path = "examples/s3_metadata.rs"

[[bench]]
name = "main"
harness = false
path = "benches/main.rs"
