[package]
name = "holt"
version = "0.3.2"
edition = "2021"
rust-version = "1.82"
autobenches = false
description = "An adaptive-radix-tree metadata storage engine for path-shaped keys, with per-blob concurrency and crash-safe persistence."
license = "MIT"
authors = ["the holt contributors"]
readme = "README.md"
repository = "https://github.com/feichai0017/holt"
homepage = "https://github.com/feichai0017/holt"
documentation = "https://docs.rs/holt"
keywords = ["art", "radix-tree", "metadata", "storage", "embedded"]
categories = ["database-implementations", "data-structures", "filesystem"]

[workspace]
members = [".", "crates/holt-ffi"]
exclude = ["benches", "fuzz", "verified"]

[dependencies]
# Bounded MPSC + `select!` between a timer and a stop-channel —
# used by the background checkpointer threads (planner / I/O /
# eviction). Std's `mpsc` lacks bounded sends and `select!`.
crossbeam-channel = "0.5"
# Sharded concurrent HashMap — backs the BufferManager's blob
# cache. Replaces v0.1's `Mutex<HashMap>` so concurrent pins on
# different blobs hit different shards (no single global lock on
# the hot read path).
dashmap = "6"
# Hardware-accelerated CRC32 (IEEE 802.3) for the WAL record
# footer. Auto-detects PCLMULQDQ on x86_64 and the CRC32
# instruction on AArch64 at runtime, falling back to a
# slice-by-16 table-driven impl on older / non-x86 cores.
# v0.1 shipped a hand-rolled 256-entry byte-at-a-time table
# (≈1.5 GB/s); `crc32fast` hits ≈8-12 GB/s on Skylake+ and
# ≈10 GB/s on Apple Silicon, dropping per-record overhead from
# ~110 ns to ~20 ns.
crc32fast = { version = "1.4", default-features = false }
# Inline storage for short range prefixes/start markers. Keeps
# `scan_keys(prefix).visit(...)` allocation-free on the common
# metadata path while still spilling for unusually long prefixes.
smallvec = "1"
# Structured event emission on `spillover` / `merge_blob` /
# `compact_blob` / WAL flush / checkpoint round. Optional so
# users who don't run a `tracing` subscriber don't pay any
# closure-construction cost.
tracing = { version = "0.1", default-features = false, optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.7", optional = true }

[dev-dependencies]
rand = "0.9"
tempfile = "3"
proptest = { version = "1", default-features = false, features = ["std", "fork", "timeout"] }

[features]
default = []
# Linux-only fast path: route FileBlobStore reads + writes
# through io_uring instead of pread/pwrite syscalls. On non-Linux
# targets the feature is a no-op (the underlying `io-uring` crate
# is gated to `cfg(target_os = "linux")`, so FileBlobStore
# stays on the pread/pwrite path). Adds the `io-uring` crate as a
# build dep.
io-uring = ["dep:io-uring"]
# Enables `tracing` instrumentation on the rare-but-important
# events: spillover, merge_blob, compact_blob, WAL flush /
# truncate, checkpoint round start/end, BM evict. Subscribers
# receive structured fields (blob_guid, byte counts, durations);
# users who don't enable a subscriber pay zero runtime cost
# beyond the cfg-gated span constructor.
tracing = ["dep:tracing"]
# Enables the `holt::metrics` module — renders `TreeStats`
# into Prometheus text format for `/metrics` endpoints. Pure
# Rust, no external crates pulled in.
metrics = []

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.bench]
inherits = "release"

[[example]]
name = "basic_kv"
path = "examples/basic_kv.rs"

[[example]]
name = "filesystem_meta"
path = "examples/filesystem_meta.rs"

[[example]]
name = "session_store"
path = "examples/session_store.rs"

[[example]]
name = "s3_metadata"
path = "examples/s3_metadata.rs"
